<resources>
    <string name="app_name">Oficina</string>
    <string name="inspetor">Inspetor</string>
    <string name="show_previous_checklist">Mostrar pré-visualização anterior</string>
    <string name="hide_previous_checklist">Ocultar pré-visualização anterior</string>
    <string name="no_previous_checklist">Nenhum checklist anterior disponível</string>
    <string name="start_inspection">Iniciar inspeção</string>
    <string name="close">Fechar</string>
    <string name="inspecao_title">INSPEÇÃO</string>
    <string name="floating_checklist_title_posto02">Checklist - Posto 02 (Inspetor)</string>
    <string name="close_checklist_window">Fechar checklist</string>
    <string name="previous_checklist_title">Pré-visualização do checklist anterior</string>
    <string name="close_previous_checklist">Fechar pré-visualização</string>
    <string name="concluir">Concluir</string>
    <string name="seguir">Seguir</string>
</resources>
